Do not restart playing if currently playing the same ImageInfo

BUG: 243069

svn path=/branches/extragear/graphics/digikam/core/; revision=1217515